SecretManager and Docker&yaml modifications